tests/fixtures/should_fail/package_after_import.bop
edition = "2026"

import "other.bop"

// Error: package must come before imports
package my.package;

struct Foo {
    x: int32;
}
